add business records

--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,15 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award: エッジテクノロジー株式会社様 / EDGE Technology Inc (<a href="https://www.edge-tech.co.jp/" target="_blank">Link</a>)
+  organization: 地理情報データの処理の業務支援 / Geographic information data processing
+  year: Nov. 2022 
+  #summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: 学校法人 小山学園様 / Education Foundation Koyama Gakuen (<a href="https://ttc.ac.jp/index.php" target="_blank">Link</a>)
+  organization: 画像処理の講義資料の作成 / Creation of lecture material on image processing
+  year: Dec. 2022 - 
+  #summary: Voted Most Likely To Succeed by a panel of my high school peers.
+
+- award: ブラウンリバース株式会社様 / Brownreverse Inc. (<a href="https://www.brownreverse.com/" target="_blank">Link</a>)
+  organization: プラント施設のバーチャルリアリティ開発業務の支援 / Development of virtual reality service for plant facilities.
+  year: Jan. 2023 - 
+  #summary: Voted Most Likely To Succeed by a panel of my high school peers.
