--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ resume_section_projects:        false
 resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           false
-resume_section_associations:    false
+resume_section_associations:    true
 # resume_section_interests:       true
 
 # Resume social links
