--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -10,13 +10,13 @@
 - organization: Tineri de Succes
   role: Volunteer
   year: 2018 &mdash; 2019
-  url: https://www
-  summary: >
-    During my stay as a volunteer in this association I made multiple public speeches and worked with my colleagues to organize the tech-side of the events held. They focus on teaching students about leadership and starting businesses in Romania
+  # url: "#"
+  # summary: >
+  # During my stay as a volunteer in this association I made multiple public speeches and worked with my colleagues to organize the tech-side of the events held. They focus on teaching students about leadership and starting businesses in Romania
 
 - organization: Moldavia
   role: Volunteer
   year: 2018 &mdash; 2019
   url: https://www.facebook.com/asociatiamoldavia/
-  summary: >
-    I was mainly tasked with the back-end, preparing the events sound-wise and dealing with the problems that arose during them, this is where I've found my problem solving passion that helped me power through the bugs and errors in my code
+  # summary: >
+  # I was mainly tasked with the back-end, preparing the events sound-wise and dealing with the problems that arose during them, this is where I've found my problem solving passion that helped me power through the bugs and errors in my code
