--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
-- url: "#"
-  description: Springfield Jazz Enthusiasts
-- url: "#"
-  description: Springfield Young Professionals
+- url: "blog.paulpetrila.com"
+  description: Personal Blog
+- url: "portofolio.paulpetrila.com"
+  description: Personal Portfolio
