--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,16 +3,16 @@
 - company: Adservio Social Innovation
   position: Software Developer
   duration: Aug, 2022 &mdash; Present
-  summary: As a software developer with experience in web technologies, I bring a unique combination of technical skills and creativity to my work at Adservio. With a strong background in building and maintaining web applications, I have the ability to turn complex problems into user-friendly solutions. My experience working with a variety of programming languages and frameworks, combined with my attention to detail and commitment to delivering quality results, has allowed me to make a significant impact on projects and ensure the success of my team. My passion for technology and ability to work effectively in a team environment make me an invaluable asset to Adservio. Projects I'm involved in at Adservio include <ul class="resume-item-list"><li>A billing module using Stripe</li><li> An admission module for Universities </li><li> General maintenance of the whole EdTech platform used by thousands of parents, teachers and students daily</li></ul>
+  summary: Cool stuff I worked on along with the awesome people at the company <ul class="resume-item-list"><li>A billing module using Stripe</li><li> An admission module for Universities </li><li> Refactoring old PHP modules into NestJS microservices</li></ul>
 
 # Pentalog
 - company: Pentalog
-  position: Software Developer Internship
+  position: Software Development Internship
   duration: Jul, 2022 &mdash; Sept, 2022
-  summary: During my internship I developed and learned about the .NET framework. I built a simple CRUD API using Web Assembly and a webpage in ASP.NET with Blazor components.
+  summary: <ul><li>Final project - Build an API to manage a restaurant with JWT authentication using the .NET framework</li><li>I've used Blazor components and ASP.NET to generate dynamic web pages</li><li>There was a lot of emphasis put into writing clean code. I learnt a lot about software philosophies like KISS, DRY, SOLID, CQS and other designing ACID complaint DBs </li></ul>
 
 # AMD
 - company: AMD
-  position: Communications Coordinator
+  position: Summer Practice
   duration: Jul, 2022  &mdash; Jul, 2022
-  summary: I entered a summer bootcamp at AMD where I learned the basics of Verilog programming. I managed to find out that lower level programming isn't for me and I kept searching for something that I enjoy doing.
+  summary: <ul><li>I learnt the basics of Verilog programming, which is basically programatically setting up logic gates.</li></ul>
