--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
 - project: jazznotes.io
   role: Founder & Primary Developer
   duration: 2012 &mdash; Present
-  # url: "#"
+  url: "#"
   description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
 
 # Springfield Community Outreach Group
