--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,8 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Software Development 
+- description: UX/UI Design
+- description: Data Analysis
+- description: Machine Learning
+- description: Artificial Intelligence
+- description: Computer Vision 
+- description: 3D Modelling 
