--- a/_config.yml
+++ b/_config.yml
@@ -9,55 +9,53 @@ sass:
   style: compressed
 
 # Resume settings
-resume_avatar:                  "true"
-resume_name:                    "Jingyi Xu"
-resume_title:                   "SDE & DS"
+resume_avatar: "true"
+resume_name: "Jingyi Xu"
+resume_title: "SDE & DS"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "jx15@ualberta.ca"
+resume_contact_email: "jx15@ualberta.ca"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "+1 825-984-7733"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
+resume_contact_telephone: "+1 825-984-7733"
+resume_contact_address: "Edmonton, CA"
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
-display_header_contact_info:    "false"
+resume_header_contact_info: "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
+display_header_contact_info: "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>Hello, Over the course of my academic and professional journey, I have served as a Backend Java Developer Intern, Software Developer Intern, and Software Engineer Intern. These roles have provided me with a rich, hands-on experience in different facets of software development, from backend processes to comprehensive software engineering. My internships have fueled my passion for problem-solving and crafting scalable solutions, and in my past roles, I have been recognized for delivering innovative solutions and enhancing process efficiency. I have also been actively involved in the complete software development process, employing Scrum and Agile methodologies for effective project management. I am eagerly looking forward to embracing new challenges and opportunities that will allow me further to expand my skills in software development and engineering. Thank you for considering my profile.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+resume_looking_for_work: "yes"
 
 # Decide which sections to use
 # comment out to hide
-resume_section_experience:      true
-resume_section_education:       true
-resume_section_projects:        true
-resume_section_skills:          true
-resume_section_recognition:     true
-resume_section_links:           true
-resume_section_associations:    true
+resume_section_experience: true
+resume_section_education: true
+resume_section_projects: true
+resume_section_skills: true
+resume_section_recognition: true
+resume_section_links: true
+resume_section_associations: true
 # resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
+  resume_github_url: "https://github.com/xuclaire0234"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
-  # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
-  resume_medium_url:            "https://medium.com/@jglovier"
-resume_print_social_links:      true
+  resume_linkedin_url: "https://www.linkedin.com/in/jingyi-claire-xu-923a56251/"
+  # resume_instagram_url:         "https://www.instagram.com/jingyixu0234/?next=%2F"
+  resume_website_url: "https://xuclaire0234.github.io/"
+  resume_discord_url: "https://discordapp.com/users/798285699836411964"
+  # resume_medium_url:            "https://medium.com/@jglovier"
+resume_print_social_links: true
 
 # Design settings
-resume_theme:                   default
-
+resume_theme: default
 # Note: when editing locally, remember to restart
 # your Jekyll server when you edit this file. Changes
 # to _config.yml are only recognized when the server starts
